--- a/ecommerceAppium/pom.xml
+++ b/ecommerceAppium/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>testng</artifactId>
             <version>7.10.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.23.0</version>
+        </dependency>
+
     </dependencies>
 </project>
