New profile on pom.xml - WIP

--- a/ecommerceAppium/pom.xml
+++ b/ecommerceAppium/pom.xml
@@ -30,6 +30,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>9.2.1</version>
